--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <script src="https://kit.fontawesome.com/051eb814e7.js" crossorigin="anonymous"></script>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -24,24 +24,24 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  <%= link_to user_path(current_user.id), class: "nav-link text-light" do %>
+                  <%= link_to user_path(current_user), class: "nav-link text-light" do %>
                     <i class="fas fa-home"></i> Home
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/users">
+                  <%= link_to users_path, class: "nav-link text-light" do %>
                     <i class="fas fa-users"></i> Users
-                  </a>
+                  <% end %>
                 </li> 
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/books">
+                  <%= link_to books_path, class: "nav-link text-light" do %>
                     <i class="fas fa-book-open"></i> Books
-                  </a>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" data-method="delete" href="/users/sign_out">
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
                     <i class="fas fa-sign-out-alt"></i> Log out
-                  </a>
+                  <% end %>
                 </li>
               <% else %>
                 <li class="nav-item">
