--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,7 @@
         <%= render 'info', user: current_user %>
       <%# New Book %>
         <%= render 'books/book', new_book: @new_book %>
-    </div>  
-    <div class="col-md-8 offset-md-1">
+    </div>  <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table table-striped">
         <thead>
