--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                <%= link_to user_path(@user.id) do %>
+                <%= link_to user_path(book.id) do %>
                   <%= image_tag @user.get_profile_image("50x40") %>
                 <% end %>
               </td>
