--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
                   <%= image_tag user.get_profile_image("50x40") %>
                 </td>
                 <td><%= user.name %></td>
-                <td><%= link_to "Show", user_path(user.id) %></td>
+                <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
             </tr> 
           <% end %>
         </<tbody>>
